package br.unitins.topicos2.ano2024.dto;

public record UsuarioDTO(
    String username,
    String senha
) {
}
