package br.unitins.topicos2.ano2024.model;

public enum TipoConsulta {
    NORMAL, EMERGENCIA, PRIMEIRA_CONSULTA;
}
