@startuml

class Usuario {
    - username: String 
    - senha: String
}

class Pessoa {
  - nome: String 
    - cpf: String
    - dataNascimento: LocalDate
}

class Paciente {

}

class Psicologo {
    - crp: String
}   

class Endereco {
    - cep: String
    - logradouro: String
    - bairro: String
    - complemento: String
}

class Estado {
    - nome: String
    - sigla: String
}

class Cidade {
    - nome: String
}

abstract class Consulta {
    - nome: String 
    - preco: String
}

class ConsultaAvulsa {
    
}

class PacoteConsulta {
    - quantidade: Integer
}

enum TipoConsulta {
    + NORMAL: int
    + EMERGENCIA: int
    + PRIMEIRA_CONSULTA: int
}


Paciente "1" *--> "1" Endereco
Paciente "*" --> "1" Cidade : naturalidade

Endereco "*" --> "1" Cidade
Cidade "*" --> "1" Estado

Paciente "1" -up-> "1" Pessoa
Psicologo "1" -up-> "1" Pessoa

Pessoa "1" --> "1" Usuario

Consulta "*" --> "1" Psicologo

ConsultaAvulsa -up-|> Consulta
PacoteConsulta -up-|> Consulta

ConsultaAvulsa "*" --> "1" TipoConsulta

@enduml